<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="300dp"
            android:imeOptions="actionSearch"
            android:maxLines="1"
            android:singleLine="true"
            android:id="@+id/et_search_content"
            android:layout_height="60dp"
            android:hint="@string/activity_search_hint" />


        <Button
            android:id="@+id/btn_seatrch"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:text="@string/search_activity_btn_des" />

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_search_tips"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/ls_result" />
    <LinearLayout
        android:id="@+id/ll_search_empty"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_marginTop="80dp"
            android:layout_height="100dp"
            android:src="@drawable/icon_activitu_search_error"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:text="@string/search_error_tips" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_search_loading"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent">

       <ProgressBar
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>