<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/ll_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmed_info_location"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_ncov_village"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="山东省临沂市费县探沂镇"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_location"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmed_info_number"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_confirmed_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:text="1人"
            android:textColor="@color/black" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmed_info_time"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_ncov_update_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:text="2020年05月30日"
            android:textColor="@color/black" />
    </LinearLayout>

</RelativeLayout>